[package]
name = "track_solana_cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "~1.18.25"
solana-rpc-client = "~1.18.25"
solana-rpc-client-api = "~1.18.25"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0.63"
toml = "0.5"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.22"
tracing-subscriber = "0.3.18"

yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.15.3+solana.1.18.25" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.15.3+solana.1.18.25" }
clap = { version = "4.2.4", features = ["derive", "env"] }